# system_programming

./: .gitignore  CMakeLists.txt  README.md  ipc.md  main.cpp  operating_systems.md  process.md  signal.md
demo/: CMakeLists.txt  fifo.h  main.cpp  message_queue.h  pipe.h  process.h  run.sh  shared_mem.h  signal_handling.h  tcp_svr_client.h
network/: README.md  client_server_communication.md  tcp_ip.md
notes/: endianness.md  ipc.md  network.md
notes/computer_system_programmers_view/: README.md  ch12.concurrent_programming.md  ch6.memory_hierarchy.md
notes/computer_system_programmers_view/code/: CMakeLists.txt  echo_client.h  echoserver_process.h  echoserver_select.h  echoserver_select_basic.h  main.cpp  run.sh
notes/computer_system_programmers_view/code/util/: CMakeLists.txt  error_handling.cpp  error_handling.h  io_handling.cpp  io_handling.h  memory_handling.cpp  memory_handling.h  network_handling.cpp  network_handling.h  process_ctrl.cpp  process_ctrl.h  pthread_handling.cpp  pthread_handling.h  robust_io.cpp  robust_io.h  shared_vars.h  signal_handling.cpp  signal_handling.h
notes/linkers_and_loaders/: README.md  ch1.linking_and_loading.md
notes/the_linux_programming_interface/: README.md
notes/understanding_the_linux_kernel/: READEME.md  ch1.introduction.md  ch13.io_archi_and_device_driver.md
